--- a/styles/style.css
+++ b/styles/style.css
@@ -445,7 +445,6 @@ footer {
   background-color: #2c2c2c;
   text-align: center;
   color: white;
-  font-family: "Roboto", sans-serif;
   padding: 5px 0;
 }
 footer p {
@@ -483,20 +482,21 @@ footer p {
   color: #f8e71c;
 }
 .index header h2 {
-  font-size: 166px;
-  font-size: 8.3rem;
+  font-size: 800%;
   font-family: "Josefin Sans", sans-serif;
   font-weight: normal;
-  font-size: 8.3rem;
   line-height: 7rem;
   margin: 0;
   text-transform: lowercase;
   color: #f8e71c;
   margin: 0 auto;
-  margin-top: calc((80vh - 63px - 382px) / 2);
+  margin-top: calc((80vh - 63px) / 2 / 2);
   max-width: 700px;
   z-index: 1;
   position: relative;
+}
+.index nav span {
+  display: none;
 }
 .index .main-nav {
   display: -webkit-box;
@@ -506,6 +506,11 @@ footer p {
       -ms-flex-align: center;
           align-items: center;
   padding: 10px 0;
+}
+
+.menu-icon {
+  display: none;
+  padding-bottom: 5px;
 }
 
 .header-container {
@@ -617,7 +622,7 @@ span {
   color: #2c2c2c;
   background-color: #f8e71c;
   display: inline-block;
-  font-size: 1rem;
+  font-size: 20px;
   width: 50px;
   height: 37px;
   text-align: center;
@@ -973,4 +978,202 @@ aside input {
 ul h5 {
   font-size: 1rem;
   color: #074115;
+}
+
+@media (max-width: 1500px) {
+  .header-img-2 {
+    max-width: 120%;
+    right: -700px;
+    top: -280px;
+  }
+}
+@media (max-width: 1200px) {
+  .index header h2 {
+    width: -webkit-min-content;
+    width: -moz-min-content;
+    width: min-content;
+  }
+
+  .header-img-2 {
+    display: none;
+  }
+
+  .resources {
+    padding-left: 40px;
+  }
+}
+@media (max-width: 950px) {
+  html {
+    font-size: 100%;
+  }
+
+  .index header {
+    height: 70vh;
+  }
+
+  .about {
+    padding: 100px 0 150px;
+  }
+
+  .plants .text-container {
+    margin-left: 50px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .workshops .text-container {
+    margin-right: 50px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+
+  .main-banner {
+    height: 320px;
+  }
+}
+@media (max-width: 850px) {
+  .index header h2 {
+    font-size: 500%;
+    line-height: 5rem;
+    margin: 0 auto;
+    margin-top: calc((80vh - 160px) / 2 / 2);
+  }
+  .index header li {
+    display: none;
+  }
+  .index .main-nav {
+    padding: 30px 0;
+  }
+  .index nav span {
+    display: in-line;
+  }
+
+  .menu-icon {
+    display: block;
+    font-size: 30px;
+    font-size: 1.5rem;
+    color: #f8e71c;
+    position: fixed;
+    right: 50px;
+    z-index: 10;
+  }
+  .menu-icon:hover {
+    color: #f8e71c;
+    cursor: pointer;
+  }
+
+  .wrapper {
+    max-width: 80%;
+  }
+
+  .about {
+    padding: 60px 0 80px;
+  }
+
+  .plants-and-workshops {
+    display: block;
+  }
+
+  .plants,
+.workshops {
+    max-width: 100%;
+  }
+  .plants .text-container,
+.workshops .text-container {
+    text-align: center;
+    max-width: 80%;
+    margin: 50px auto;
+  }
+  .plants .img-container,
+.workshops .img-container {
+    margin-right: 20px;
+    bottom: 20px;
+  }
+
+  .workshops {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .workshops .text-container {
+    margin-top: 70px;
+  }
+  .workshops .img-container {
+    position: static;
+    margin-left: 20px;
+    margin-right: 0;
+  }
+
+  .resources {
+    margin: 0 auto;
+  }
+  .resources h5::before {
+    font-size: 16px;
+    font-size: 0.8rem;
+    width: 30px;
+    height: 22px;
+    text-align: center;
+    padding-top: 8px;
+    border-radius: 50%;
+    position: absolute;
+    left: -40px;
+    bottom: -4px;
+  }
+  .resources ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+  }
+  .resources li {
+    max-width: 100%;
+    margin-top: 20px;
+  }
+  .resources li:nth-child(1) {
+    margin-top: 45px;
+  }
+
+  .main-banner {
+    height: 200px;
+  }
+
+  .founder {
+    margin: 80px auto;
+  }
+  .founder .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  .founder .img-container {
+    max-width: 280px;
+    max-height: 280px;
+  }
+  .founder .text-container {
+    max-width: 100%;
+    margin: 0;
+    margin-top: 60px;
+    text-align: center;
+  }
+
+  .gallery {
+    display: none;
+  }
+
+  footer {
+    padding: 0;
+  }
+  footer p {
+    font-size: 16px;
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 415px) {
+  .index header h2 {
+    font-size: 400%;
+  }
 }
