--- a/styles/sass/partials/_general-styles.scss
+++ b/styles/sass/partials/_general-styles.scss
@@ -57,6 +57,15 @@ img {
   box-shadow: 20px 20px $yellow;
 }
 
+.menu-icon {
+  display: none;
+  padding-bottom: 5px;
+}
+
+nav span {
+  display: none;
+}
+
 p {
   @include p-style;
 }
