--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -5,3 +5,4 @@
 @import "./partials/contact";
 @import "./partials/blog";
 @import "./partials/media-query-home";
+@import "./partials/media-query-blog";
