created media query partial for contact and finished styles forr it

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -6,3 +6,4 @@
 @import "./partials/blog";
 @import "./partials/media-query-home";
 @import "./partials/media-query-blog";
+@import "./partials/media-query-contact";
