--- a/styles/style.css
+++ b/styles/style.css
@@ -1301,3 +1301,58 @@ form input[type=email] {
     display: none;
   }
 }
+@media (max-width: 1300px) {
+  .contact main .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+
+  .contact-information {
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .contact-form-container {
+    margin: 0 auto;
+    position: static;
+  }
+}
+@media (max-width: 850px) {
+  .contact header li {
+    display: none;
+  }
+  .contact .main-nav {
+    padding: 20px 0;
+  }
+
+  .contact-form-container {
+    background-color: #f0efed;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 50px 0;
+    max-width: 80%;
+  }
+  .contact-form-container input {
+    background-color: #f0efed;
+  }
+
+  .contact-information {
+    padding: 40px 0 50px;
+  }
+}
+@media (max-width: 500px) {
+  .contact-form-container {
+    max-width: 100%;
+  }
+
+  form input[type=text],
+form input[type=email] {
+    margin-bottom: 20px;
+  }
+}
