--- a/styles/sass/partials/_media-query-contact.scss
+++ b/styles/sass/partials/_media-query-contact.scss
@@ -22,14 +22,37 @@
 
 @media (max-width: 850px) {
   .contact {
-    header {
-      li {
-        display: none;
-      }
+    h1 {
+      padding: 10px 0;
     }
+    header {
+      ul {
+        flex-direction: column;
+        position: fixed;
+        padding-right: 35px;
+        right: -150px;
+        top: 50px;
+        background-color: rgba($color: #000000, $alpha: 0.8);
+        z-index: 10;
+        transition: 0.4s;
+      }
 
-    .main-nav {
-      padding: 20px 0;
+      li {
+        margin: 15px 0;
+        text-align: right;
+      }
+
+      input[type="checkbox"] {
+        top: 25px;
+
+        &:checked ~ ul {
+          right: 0;
+        }
+      }
+
+      .menu-icon {
+        top: 20px;
+      }
     }
   }
 
