--- a/styles/sass/partials/_media-query-index.scss
+++ b/styles/sass/partials/_media-query-index.scss
@@ -1,7 +1,7 @@
 // media query max-width: 1500px
 @media (max-width: 1400px) {
   .header-img-2 {
-    right: -720px;
+    right: -600px;
     top: -280px;
   }
 }
@@ -36,7 +36,11 @@
   // header styles
   .index {
     header {
-      height: 70vh;
+      height: 80vh;
+
+      h2 {
+        margin-top: calc(((80vh - 224px) / 2) / 2);
+      }
     }
   }
 
@@ -71,6 +75,9 @@
 @media (max-width: 850px) {
   // header styles
   .index {
+    h1 {
+      margin-top: 30px;
+    }
     header {
       h2 {
         font-size: 500%;
@@ -79,18 +86,39 @@
         margin-top: calc(((80vh - 160px) / 2) / 2);
       }
 
+      ul {
+        flex-direction: column;
+        position: fixed;
+        padding-right: 35px;
+        right: -150px;
+        top: 50px;
+        background-color: rgba($color: #000000, $alpha: 0.8);
+        z-index: 10;
+        transition: 0.4s;
+      }
+
       li {
-        display: none;
+        margin: 15px 0;
+        text-align: right;
+      }
+
+      input[type="checkbox"]:checked ~ ul {
+        right: 0;
       }
     }
+  }
 
-    .main-nav {
-      padding: 30px 0;
-    }
+  nav span {
+    display: in-line;
+  }
 
-    nav span {
-      display: in-line;
-    }
+  input[type="checkbox"] {
+    display: inline-block;
+    opacity: 0;
+    margin-left: auto;
+    position: fixed;
+    top: 50px;
+    right: 50px;
   }
 
   .menu-icon {
