mobile menu tweaks (anchors)

--- a/styles/sass/partials/_general-styles.scss
+++ b/styles/sass/partials/_general-styles.scss
@@ -26,12 +26,13 @@ a {
   text-decoration: none;
   padding: 15px;
 
-  &:active {
+  &:active,
+  &:focus {
     color: $yellow;
   }
 
   &:visited {
-    color: initial;
+    color: inherit;
   }
 }
 
