--- a/styles/sass/partials/_media-query-index.scss
+++ b/styles/sass/partials/_media-query-index.scss
@@ -136,7 +136,7 @@
   }
 
   .wrapper {
-    max-width: 80%; // ***************************************************************************************************************
+    max-width: 80%; // being applied to general styles
   }
 
   // about styles
