--- a/styles/sass/partials/_general-styles.scss
+++ b/styles/sass/partials/_general-styles.scss
@@ -64,7 +64,9 @@ img {
 
 .menu-icon {
   display: none;
-  padding-bottom: 5px;
+  padding: 10px;
+  margin-top: -5px;
+  background-color: rgba($color: #000000, $alpha: 0.7);
 }
 
 nav span {
