--- a/styles/style.css
+++ b/styles/style.css
@@ -326,7 +326,9 @@ img {
 
 .menu-icon {
   display: none;
-  padding-bottom: 5px;
+  padding: 10px;
+  margin-top: -5px;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 nav span {
@@ -537,7 +539,7 @@ span {
   max-width: 90%;
   position: absolute;
   right: -650px;
-  top: -300px;
+  top: -260px;
 }
 
 .about {
