--- a/styles/sass/partials/_media-query-index.scss
+++ b/styles/sass/partials/_media-query-index.scss
@@ -1,11 +1,3 @@
-// media query max-width: 1500px
-@media (max-width: 1400px) {
-  .header-img-2 {
-    right: -600px;
-    top: -280px;
-  }
-}
-
 // media query max-width: 1200px
 @media (max-width: 1200px) {
   // header styles
@@ -39,7 +31,7 @@
       height: 80vh;
 
       h2 {
-        margin-top: calc(((80vh - 224px) / 2) / 2);
+        margin-top: calc(((80vh - 224px + 73px) / 2) / 2);
       }
     }
   }
@@ -83,18 +75,18 @@
         font-size: 500%;
         line-height: 5rem;
         margin: 0 auto;
-        margin-top: calc(((80vh - 160px) / 2) / 2);
+        margin-top: calc(((80vh - 160px + 57px) / 2) / 2);
       }
 
       ul {
         flex-direction: column;
         position: fixed;
-        padding-right: 35px;
+        padding-right: 15px;
         right: -150px;
-        top: 45px;
+        top: 42px;
         background-color: rgba($color: #000000, $alpha: 0.8);
         z-index: 10;
-        transition: 0.4s;
+        transition: 0.5s;
       }
 
       li {
@@ -112,6 +104,7 @@
     display: in-line;
   }
 
+  // style bein applied in contact and blog page
   input[type="checkbox"] {
     display: inline-block;
     opacity: 0;
@@ -127,14 +120,14 @@
     color: $yellow;
     position: fixed;
     top: 12px;
-    right: 50px;
+    right: 20px;
     z-index: 10;
 
     &:hover {
       color: $yellow;
       cursor: pointer;
     }
-  }
+  } // end of styles being applied in all pages
 
   .wrapper {
     max-width: 80%; // being applied to general styles
