--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -2,40 +2,9 @@
 .blog {
   header {
     background-image: url(../planted-final-assets/blog-header-1.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 450px;
-    color: $off-white;
 
-    .wrapper {
-      display: flex;
-      align-items: center;
-      padding: 10px 0 0;
-
-      h2 {
-        max-width: 300px;
-        margin-top: 120px;
-      }
-    }
-
-    ul {
-      display: flex;
-      justify-content: space-between;
-      padding-left: 10px;
-    }
-
-    li {
-      margin: 0 15px;
-      text-transform: uppercase;
-
-      &:nth-child(3),
-      &:hover {
-        color: $yellow;
-      }
-    }
-    nav {
-      background-color: black;
+    li:nth-child(3) {
+      color: $yellow;
     }
   }
 
