--- a/styles/sass/partials/_media-query-index.scss
+++ b/styles/sass/partials/_media-query-index.scss
@@ -104,7 +104,7 @@
     display: in-line;
   }
 
-  // style bein applied in contact and blog page
+  // style being applied in contact and blog page
   input[type="checkbox"] {
     display: inline-block;
     opacity: 0;
