--- a/styles/sass/partials/_media-query-blog.scss
+++ b/styles/sass/partials/_media-query-blog.scss
@@ -121,8 +121,7 @@
     max-width: 100%;
   }
 
-  .comment-1,
-  .comment-2 {
+  #comments li {
     flex-wrap: wrap;
     justify-content: center;
 
